--- a/women.html
+++ b/women.html
@@ -95,8 +95,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="./women.html">About Us
-            <div class="overlay-trigger">
+            <a href="./about.html">About Us
+  <!--      <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay about-overlay">
@@ -109,10 +109,10 @@
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis eveniet, dolorem maxime esse error laborum temporibus obcaecati hic delectus a, tempore reiciendis earum quae repellendus quaerat similique quod, ea fugiat!</p>
                 </div>
               </div>
-            </div>
+            </div>       -->
           </a>
-            <a href="./women.html">Contact
-            <div class="overlay-trigger">
+            <a href="./contact.html">Contact
+  <!--        <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay contact-overlay">
@@ -137,7 +137,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>         -->
           </a>
           </div>
         </div>
@@ -147,9 +147,9 @@
         <input type="checkbox" id="hamburger-menu" />
         <div class="navigation-mobile">
           <div class="shop-section">
-            <a href="men.html">Men</a>
-            <a href="women.html">Women</a>
-            <a href="outlet.html">Outlet</a>
+            <a href="./men.html">Men</a>
+            <a href="./women.html">Women</a>
+            <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
@@ -161,8 +161,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
+            <a href="./about.html">About Us</a>
+            <a href="./contact.html">Contact</a>
           </div>
         </div>
         <div class="info-section">
@@ -220,7 +220,8 @@
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+                          
+        <!--                  <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
@@ -239,7 +240,7 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>
+                          </ul>              
                           <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order1"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order1">
@@ -250,7 +251,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>      -->
                         </div>
                       </div> 
                     </div>
@@ -303,7 +304,7 @@
                         <div class="overlay-inside cart">
                           <button onclick="showCart()">Your Cart</button>
                           <button class="cta cta-red" type="cta">Check Out</button>
-                          <label class="hidden checkbox-trigger" for="order2"></label>
+       <!--                   <label class="hidden checkbox-trigger" for="order2"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order2">
                           <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
@@ -312,7 +313,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>         -->
                         </div>
                       </div>
                     </div>
@@ -357,13 +358,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart3"></label>
+                      <button class="cta" type="text" onclick="addToCart('Brown Jacket for Women', 3, './images/brown-woman.jpg')">Add to Cart</button>
+         <!--             <label class="hidden checkbox-trigger" for="addtocart3"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart3">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+       <!--                   <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/brown-woman.jpg" alt="Brown Jacket for Women"/>
@@ -382,9 +384,9 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>
-                          <button class="cta cta-red" type="cta">Check Out</button>
-                          <label class="hidden checkbox-trigger" for="order3"></label>
+                          </ul>              -->
+                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+           <!--               <label class="hidden checkbox-trigger" for="order3"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order3">
                           <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
@@ -393,7 +395,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>         -->
                         </div>
                       </div>
                     </div>
@@ -428,7 +430,7 @@
                           <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
-                      <a href="">Read reviews >></a>
+                      <a href="https://no.trustpilot.com/">Read reviews >></a>
                     </div>
                   </div>
                   <div class="product-image">
@@ -439,13 +441,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart4"></label>
+                      <button class="cta" type="text" onclick="addtoCart('Yellow Jacket for Women', 4, './images/yellow-woman.jpg')">Add to Cart</button>
+       <!--            <label class="hidden checkbox-trigger" for="addtocart4"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart4">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+        <!--                  <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/yellow-woman.jpg" alt="Yellow Jacket for Women"/>
@@ -464,10 +467,10 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>
-                          <button class="cta cta-red" type="cta">Check Out</button>
-                          <label class="hidden checkbox-trigger" for="order4"></label>
-                          <input class="hidden checkbox-trigger" type="checkbox" id="order4">
+                          </ul>        -->
+                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+               <!--           <label class="hidden checkbox-trigger" for="order4"></label>
+                         <input class="hidden checkbox-trigger" type="checkbox" id="order4">
                           <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
@@ -475,7 +478,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>        -->
                         </div>
                       </div>
                     </div>
@@ -510,7 +513,7 @@
                           <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
-                      <a href="">Read reviews >></a>
+                      <a href="https://no.trustpilot.com/">Read reviews >></a>
                     </div>
                   </div>
                   <div class="product-image">
@@ -521,13 +524,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart5"></label>
+                      <button class="cta" type="text" onclick="addtoCart('White Jacket for Women', 5, './images/white-woman.jpg')">Add to Cart</button>
+     <!--                 <label class="hidden checkbox-trigger" for="addtocart5"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart5">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+       <!--                   <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/white-woman.jpg" alt="White Jacket for Women"/>
@@ -546,9 +550,9 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>
-                          <button class="cta cta-red" type="cta">Check Out</button>
-                          <label class="hidden checkbox-trigger" for="order5"></label>
+                          </ul>          -->
+                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+        <!--                  <label class="hidden checkbox-trigger" for="order5"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order5">
                           <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
@@ -557,7 +561,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>        -->
                         </div>
                       </div>
                     </div>
@@ -604,13 +608,15 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart6"></label>
+                      <button class="cta" type="text" onclick="addtoCart('Red Jacket for Women', 5, './images/red-woman.jpg')">Add to Cart</button>
+
+       <!--               <label class="hidden checkbox-trigger" for="addtocart6"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart6">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+        <!--                  <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-woman.jpg" alt="Red Jacket for Women"/>
@@ -629,8 +635,8 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>
-                          <button class="cta cta-red" type="cta">Check Out</button>
+                          </ul>       -->
+                          <button class="cta cta-red" type="cta" onclick="addToCart">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order6"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order6">
                           <div class="popup order-popup">
